--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body bgColor="322D2C">
-    <h1 width="500" height="600">
+    <h1>
         QCM
     </h1>
     <hr>
@@ -19,11 +19,42 @@
         <h3>Valves</h3>
     </div>
     <hr>
-    <div class="box"><img class = "icon" src="Icons/mass_flow_icon.png" alt="Mass Flow Icon"></div>
-    <div class="box"><img class = "icon" src="Icons/pressure_meter_icon.png" alt="Pressure Meter Icon"></div>
-    <div class="box"><img class = "icon" src="Icons/temperature_icon.png" alt="Temperature Icon"></div>
-    <div class="box"><img class = "icon" src="Icons/syringe_pump_icon.png" alt="Syringe Pump Icon"></div>
-    <div class="box"><img class = "icon" src="Icons/valves_icon.png" alt="Valves Icon"></div>
-    <div class="summary">SUMMARY</div>
+    <div class="dashboard">
+        <div class = "container">
+                <img src="Icons/mass_flow_icon.png" alt="Mass Flow Icon">
+            <div class = "info">
+                <p>Unit ID:</p>
+            </div>
+        </div>
+        <div class = "container">
+                <img src="Icons/pressure_meter_icon.png" alt="Pressure Meter Icon">
+            <div class = "info">
+                <p>Unit ID:</p>
+            </div>
+        </div>
+        <div class = "container">
+                <img src="Icons/temperature_icon.png" alt="Temperature Icon">
+            <div class = "info">
+                <p>Unit ID:</p>
+            </div>
+        </div>
+        <div class = "container">
+                <img src="Icons/syringe_pump_icon.png" alt="Syringe Pump Icon">
+            <div class = "info">
+                <p>Unit ID:</p>
+            </div>
+        </div>
+        <div class = "container">
+                <img src="Icons/valves_icon.png" alt="Valves Icon">
+            <div class = "info">
+                <p>Unit ID:</p>
+            </div>
+        </div>
+    </div>
+    <div class = "container_2">
+        <div class = "info">
+            <p>SUMMARY</p>
+        </div>
+    </div>
 </body>
 </html>
