--- a/index.html
+++ b/index.html
@@ -2,57 +2,76 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QCM</title>
     <link rel="stylesheet" href="QCM.css">
-
+    <script src="QCM.js"></script>
 </head>
-<body bgColor="322D2C">
+<body>
     <h1>
         QCM
     </h1>
     <hr>
-    <div class = "sections">
-        <h3>Mass Flow</h3>
-        <h3>Pressure</h3>
-        <h3>Temperature</h3>
-        <h3>Syringe Pump</h3>
-        <h3>Valves</h3>
-    </div>
+    <nav>
+        <ul class = "sections">
+            <li><a href="index.html" class = "current_sec">Main</a></li>
+            <li><a href="mass_flow.html" class = "sec">Mass Flow</a></li>
+            <li><a href="pressure.html" class = "sec">Pressure</a></li>
+            <li><a href="temperature.html" class = "sec">Temperature</a></li>
+            <li><a href="syringe_pump.html" class = "sec">Syringe Pump</a></li>
+            <li><a href="valves.html" class = "sec">Valves</a></li>
+        </ul>
+        </nav>
     <hr>
     <div class="dashboard">
         <div class = "container">
                 <img src="Icons/mass_flow_icon.png" alt="Mass Flow Icon">
-            <div class = "info">
+            <div class = "unit_id">
                 <p>Unit ID:</p>
+                <p>Abs Pressure:</p>
+                <p>Temperature:</p>
+                <p>Vol Flow:</p>
+                <p>Mass Flow:</p>
+                <p>Gas:</p>
+            </div>
+            <div class="info">
+                <p></p>
             </div>
         </div>
         <div class = "container">
                 <img src="Icons/pressure_meter_icon.png" alt="Pressure Meter Icon">
-            <div class = "info">
+            <div class = "unit_id">
                 <p>Unit ID:</p>
+                <p>Dif Pressure:</p>
             </div>
         </div>
         <div class = "container">
                 <img src="Icons/temperature_icon.png" alt="Temperature Icon">
-            <div class = "info">
-                <p>Unit ID:</p>
+            <div class = "unit_id">
+                <p>Time: </p>
+                <p>Temp1: </p>
+                <p>Temp2: </p>
             </div>
         </div>
         <div class = "container">
                 <img src="Icons/syringe_pump_icon.png" alt="Syringe Pump Icon">
-            <div class = "info">
+            <div class = "unit_id">
                 <p>Unit ID:</p>
             </div>
         </div>
         <div class = "container">
                 <img src="Icons/valves_icon.png" alt="Valves Icon">
-            <div class = "info">
+            <div class = "unit_id">
                 <p>Unit ID:</p>
+                <p>Valve 1:</p>
+                <p>Valve 2:</p>
+                <p>Valve 3:</p>
+                <p>Valve 4:</p>
             </div>
         </div>
     </div>
     <div class = "container_2">
-        <div class = "info">
+        <div  class="info">
             <p>SUMMARY</p>
         </div>
     </div>
