--- a/syringe_pump.html
+++ b/syringe_pump.html
@@ -25,8 +25,8 @@
 <hr>
 <div class = "container_sec">
     <form>
-        <label for="temp_change" class = "info_sec">Set Temperature:</label>
-        <input type="text" id="temp_change" name="temp_change">
+        <label for="sp_change" class = "info_sec">Syringe Pump:</label>
+        <input type="text" id="sp_change" name="sp_change">
         <input type="submit" value="Send">
     </form>
 </div>
