--- a/valves.html
+++ b/valves.html
@@ -24,11 +24,22 @@
 </nav>
 <hr>
 <div class = "container_sec">
-    <form>
-        <label for="temp_change" class = "info_sec">Set Temperature:</label>
-        <input type="text" id="temp_change" name="temp_change">
-        <input type="submit" value="Send">
-    </form>
+    <ul class = "sections">
+        <li><a class = "valve_title">Valves Open: </a></li>
+        <li><a class = "valve">1</a></li>
+        <li><a class = "valve">2</a></li>
+        <li><a class = "valve">3</a></li>
+        <li><a class = "valve">4</a></li>
+        <li><a class = "valve">5</a></li>
+    </ul>
+    <ul class = "sections">
+        <li><a class = "valve_title">Valves Close: </a></li>
+        <li><a class = "valve">1</a></li>
+        <li><a class = "valve">2</a></li>
+        <li><a class = "valve">3</a></li>
+        <li><a class = "valve">4</a></li>
+        <li><a class = "valve">5</a></li>
+    </ul>
 </div>
 </body>
 </html>
