--- a/pressure.html
+++ b/pressure.html
@@ -25,8 +25,8 @@
 <hr>
 <div class = "container_sec">
     <form>
-        <label for="temp_change" class = "info_sec">Set Temperature:</label>
-        <input type="text" id="temp_change" name="temp_change">
+        <label for="pressure_change" class = "info_sec">Set Pressure:</label>
+        <input type="text" id="pressure_change" name="pressure_change">
         <input type="submit" value="Send">
     </form>
 </div>
